Fix: avoided text wrap on product extend name title

--- a/src/2d/extend_panel.css
+++ b/src/2d/extend_panel.css
@@ -24,7 +24,7 @@
         
             #backName {
                 margin-left: auto;
-                margin-right: 150px;
+                margin-right: auto;
             }
         }
         
